--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ env:
     AWS_REGION: us-east-1
 
 jobs:
-    terraform-plan:
+    terraform:
         name: Apply terraform code changes
         runs-on: ubuntu-latest
         defaults:
@@ -53,3 +53,8 @@ jobs:
             - name: Terraform plan status
               if: steps.plan.outcome == 'failure'
               run: exit 1
+
+            - name: Terraform apply
+              id: apply
+              if: github.ref == 'ref/heads/main' && github.event_name == 'push'
+              run: terraform apply -auto-approve -input-false planfile
