--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: "open-telemetry-iac"
 on:
     push:
         branches:
-            - main
+            - master
             - stage
         paths:
             - terraform/**
     pull_request:
         branches:
-            - main
+            - master
         paths:
             - terraform/**
 
@@ -56,5 +56,5 @@ jobs:
 
             - name: Terraform apply
               id: apply
-              if: github.ref == 'ref/heads/main' && github.event_name == 'push'
+              if: github.ref == 'ref/heads/master' && github.event_name == 'push'
               run: terraform apply -auto-approve -input-false -parallelism=1 planfile
