--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
             - master
         paths:
             - terraform/**
+            - .github/**
 
 env:
     AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
@@ -56,5 +57,5 @@ jobs:
 
             - name: Terraform apply
               id: apply
-              if: github.ref == 'ref/heads/master' && github.event_name == 'push'
+              if: github.ref == 'refs/heads/master' && github.event_name == 'push'
               run: terraform apply -auto-approve -input-false -parallelism=1 planfile
