--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,4 @@ jobs:
             - name: Terraform apply
               id: apply
               if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-              run: terraform apply -auto-approve -input-false -parallelism=1 planfile
+              run: terraform apply -auto-approve -input=false -parallelism=1 planfile
